Menu behaviour jump fixed

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,7 +12,6 @@
 html {
     height: 100%;
     font-size: 10px;
-    background-color: $menu-color;
 }
 
 a,
@@ -22,11 +21,15 @@ button {
 }
 
 body {
+    @include font(1.4rem, $text-color, 900, $text-ff, 1.8);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    background-color: $menu-color;
+}
+
+.body{
     position: relative;
     min-height: 100%;
     max-width: 100vw;
-    @include font(1.4rem, $text-color, 900, $text-ff, 1.8);
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
     overflow-x: hidden;
 }
 
